--- a/passgenerator/templates/passgenerator/layout.html
+++ b/passgenerator/templates/passgenerator/layout.html
@@ -15,8 +15,8 @@
 
     </head>
     <body>
-        <div class="container">
-            <a href="{% url 'about' %}" class="btn btn-outline-secondary">About this app!</a>
+        <div class="container col-8 mx-auto">
+            <a href="{% url 'about' %}" class="btn btn-outline-success">About this app!</a>
             <br>
             <br>
             {% block body %}
