fixed alignment on password result page

--- a/passgenerator/templates/passgenerator/about.html
+++ b/passgenerator/templates/passgenerator/about.html
@@ -19,5 +19,5 @@
     </article>
     <br>
     <br>
-    <a href="{% url 'home' %}" class="btn btn-warning">Go to Home page</a>
+    <a href="{% url 'home' %}" class="btn btn-outline-dark">Go to Home page</a>
 {% endblock %}
