--- a/passgenerator/templates/passgenerator/password.html
+++ b/passgenerator/templates/passgenerator/password.html
@@ -1,7 +1,7 @@
 {% extends 'passgenerator/layout.html' %} 
 
 {% block body %}
-    <div class="alert alert-success col-8 mx-auto" role="alert">
+    <div class="alert alert-success mx-auto" role="alert">
         <h2 class="alert-heading">Your password is:</h2>
         <h4> {{ password }} </h4>
     </div>
@@ -9,5 +9,5 @@
 
     
 
-    <a href="{% url 'home' %}" class="btn btn-warning">Back to Home Page</a>
+    <a href="{% url 'home' %}" class="btn btn-outline-dark">Back to Home Page</a>
 {% endblock %}
